module/tsm/module/module.output
   0  $accept : result $end

   1  result : statement
   2         | result statement

   3  statement : module

   4  module : TOK_MODULE def_ident '{' definition_list '}'

   5  definition_list : definition
   6                  | definition_list definition

   7  definition : const
   8             | struct
   9             | enum
  10             | tsm_interface

  11  const : TOK_CONST typed_ident '=' TOK_INT ';'
  12        | TOK_CONST typed_ident '=' TOK_FLOAT ';'
  13        | TOK_CONST typed_ident '=' TOK_STR ';'

  14  struct : TOK_STRUCT def_ident '{' struct_arglist '}' ';'

  15  struct_arglist : struct_arg
  16                 | struct_arglist struct_arg

  17  struct_arg : typed_ident ';'

  18  enum : TOK_ENUM def_ident '{' enum_list '}' ';'

  19  enum_list : enum_value
  20            | enum_list ',' enum_value

  21  enum_value : TOK_IDENT
  22             | TOK_IDENT '=' TOK_INT

  23  tsm_interface : TOK_TSMIFACE def_ident '{' tsm_sections '}' ';'

  24  tsm_sections : commands
  25               | events
  26               | tsm_sections commands
  27               | tsm_sections events

  28  commands : TOK_COMMANDS commandlist

  29  events : TOK_EVENTS eventlist

  30  commandlist : command
  31              | commandlist command

  32  eventlist : event
  33            | eventlist event

  34  event : TOK_VOID def_ident '(' arglist ')' ';'

  35  command : TOK_VOID def_ident '(' command_sections ')' ';'

  36  $$1 :

  37  command_sections : $$1 arglist
  38                   | insection
  39                   | inoutsection
  40                   | outsection
  41                   | insection inoutsection
  42                   | insection outsection
  43                   | inoutsection outsection
  44                   | insection inoutsection outsection

  45  $$2 :

  46  insection : TOK_INSECT $$2 arglist

  47  $$3 :

  48  inoutsection : TOK_INOUTSECT $$3 arglist

  49  $$4 :

  50  outsection : TOK_OUTSECT $$4 arglist

  51  arglist :
  52          | func_arg
  53          | func_arg ';' arglist

  54  func_arg : typed_ident
  55           | TOK_RAW typed_ident

  56  $$5 :

  57  typed_ident : $$5 type TOK_IDENT

  58  type : TOK_IDENT
  59       | TOK_SEQUENCE '<' type '>'

  60  def_ident : TOK_IDENT

state 0
	$accept : . result $end  (0)

	TOK_MODULE  shift 1
	.  error

	result  goto 2
	statement  goto 3
	module  goto 4


state 1
	module : TOK_MODULE . def_ident '{' definition_list '}'  (4)

	TOK_IDENT  shift 5
	.  error

	def_ident  goto 6


state 2
	$accept : result . $end  (0)
	result : result . statement  (2)

	$end  accept
	TOK_MODULE  shift 1
	.  error

	statement  goto 7
	module  goto 4


state 3
	result : statement .  (1)

	.  reduce 1


state 4
	statement : module .  (3)

	.  reduce 3


state 5
	def_ident : TOK_IDENT .  (60)

	.  reduce 60


state 6
	module : TOK_MODULE def_ident . '{' definition_list '}'  (4)

	'{'  shift 8
	.  error


state 7
	result : result statement .  (2)

	.  reduce 2


state 8
	module : TOK_MODULE def_ident '{' . definition_list '}'  (4)

	TOK_ENUM  shift 9
	TOK_CONST  shift 10
	TOK_STRUCT  shift 11
	TOK_TSMIFACE  shift 12
	.  error

	definition_list  goto 13
	definition  goto 14
	const  goto 15
	struct  goto 16
	enum  goto 17
	tsm_interface  goto 18


state 9
	enum : TOK_ENUM . def_ident '{' enum_list '}' ';'  (18)

	TOK_IDENT  shift 5
	.  error

	def_ident  goto 19


state 10
	const : TOK_CONST . typed_ident '=' TOK_INT ';'  (11)
	const : TOK_CONST . typed_ident '=' TOK_FLOAT ';'  (12)
	const : TOK_CONST . typed_ident '=' TOK_STR ';'  (13)
	$$5 : .  (56)

	.  reduce 56

	typed_ident  goto 20
	$$5  goto 21


state 11
	struct : TOK_STRUCT . def_ident '{' struct_arglist '}' ';'  (14)

	TOK_IDENT  shift 5
	.  error

	def_ident  goto 22


state 12
	tsm_interface : TOK_TSMIFACE . def_ident '{' tsm_sections '}' ';'  (23)

	TOK_IDENT  shift 5
	.  error

	def_ident  goto 23


state 13
	module : TOK_MODULE def_ident '{' definition_list . '}'  (4)
	definition_list : definition_list . definition  (6)

	TOK_ENUM  shift 9
	TOK_CONST  shift 10
	TOK_STRUCT  shift 11
	TOK_TSMIFACE  shift 12
	'}'  shift 24
	.  error

	definition  goto 25
	const  goto 15
	struct  goto 16
	enum  goto 17
	tsm_interface  goto 18


state 14
	definition_list : definition .  (5)

	.  reduce 5


state 15
	definition : const .  (7)

	.  reduce 7


state 16
	definition : struct .  (8)

	.  reduce 8


state 17
	definition : enum .  (9)

	.  reduce 9


state 18
	definition : tsm_interface .  (10)

	.  reduce 10


state 19
	enum : TOK_ENUM def_ident . '{' enum_list '}' ';'  (18)

	'{'  shift 26
	.  error


state 20
	const : TOK_CONST typed_ident . '=' TOK_INT ';'  (11)
	const : TOK_CONST typed_ident . '=' TOK_FLOAT ';'  (12)
	const : TOK_CONST typed_ident . '=' TOK_STR ';'  (13)

	'='  shift 27
	.  error


state 21
	typed_ident : $$5 . type TOK_IDENT  (57)

	TOK_SEQUENCE  shift 28
	TOK_IDENT  shift 29
	.  error

	type  goto 30


state 22
	struct : TOK_STRUCT def_ident . '{' struct_arglist '}' ';'  (14)

	'{'  shift 31
	.  error


state 23
	tsm_interface : TOK_TSMIFACE def_ident . '{' tsm_sections '}' ';'  (23)

	'{'  shift 32
	.  error


state 24
	module : TOK_MODULE def_ident '{' definition_list '}' .  (4)

	.  reduce 4


state 25
	definition_list : definition_list definition .  (6)

	.  reduce 6


state 26
	enum : TOK_ENUM def_ident '{' . enum_list '}' ';'  (18)

	TOK_IDENT  shift 33
	.  error

	enum_list  goto 34
	enum_value  goto 35


state 27
	const : TOK_CONST typed_ident '=' . TOK_INT ';'  (11)
	const : TOK_CONST typed_ident '=' . TOK_FLOAT ';'  (12)
	const : TOK_CONST typed_ident '=' . TOK_STR ';'  (13)

	TOK_INT  shift 36
	TOK_FLOAT  shift 37
	TOK_STR  shift 38
	.  error


state 28
	type : TOK_SEQUENCE . '<' type '>'  (59)

	'<'  shift 39
	.  error


state 29
	type : TOK_IDENT .  (58)

	.  reduce 58


state 30
	typed_ident : $$5 type . TOK_IDENT  (57)

	TOK_IDENT  shift 40
	.  error


state 31
	struct : TOK_STRUCT def_ident '{' . struct_arglist '}' ';'  (14)
	$$5 : .  (56)

	.  reduce 56

	typed_ident  goto 41
	struct_arglist  goto 42
	struct_arg  goto 43
	$$5  goto 21


state 32
	tsm_interface : TOK_TSMIFACE def_ident '{' . tsm_sections '}' ';'  (23)

	TOK_COMMANDS  shift 44
	TOK_EVENTS  shift 45
	.  error

	tsm_sections  goto 46
	commands  goto 47
	events  goto 48


state 33
	enum_value : TOK_IDENT .  (21)
	enum_value : TOK_IDENT . '=' TOK_INT  (22)

	'='  shift 49
	'}'  reduce 21
	','  reduce 21


state 34
	enum : TOK_ENUM def_ident '{' enum_list . '}' ';'  (18)
	enum_list : enum_list . ',' enum_value  (20)

	'}'  shift 50
	','  shift 51
	.  error


state 35
	enum_list : enum_value .  (19)

	.  reduce 19


state 36
	const : TOK_CONST typed_ident '=' TOK_INT . ';'  (11)

	';'  shift 52
	.  error


state 37
	const : TOK_CONST typed_ident '=' TOK_FLOAT . ';'  (12)

	';'  shift 53
	.  error


state 38
	const : TOK_CONST typed_ident '=' TOK_STR . ';'  (13)

	';'  shift 54
	.  error


state 39
	type : TOK_SEQUENCE '<' . type '>'  (59)

	TOK_SEQUENCE  shift 28
	TOK_IDENT  shift 29
	.  error

	type  goto 55


state 40
	typed_ident : $$5 type TOK_IDENT .  (57)

	.  reduce 57


state 41
	struct_arg : typed_ident . ';'  (17)

	';'  shift 56
	.  error


state 42
	struct : TOK_STRUCT def_ident '{' struct_arglist . '}' ';'  (14)
	struct_arglist : struct_arglist . struct_arg  (16)
	$$5 : .  (56)

	'}'  shift 57
	TOK_SEQUENCE  reduce 56
	TOK_IDENT  reduce 56

	typed_ident  goto 41
	struct_arg  goto 58
	$$5  goto 21


state 43
	struct_arglist : struct_arg .  (15)

	.  reduce 15


state 44
	commands : TOK_COMMANDS . commandlist  (28)

	TOK_VOID  shift 59
	.  error

	commandlist  goto 60
	command  goto 61


state 45
	events : TOK_EVENTS . eventlist  (29)

	TOK_VOID  shift 62
	.  error

	eventlist  goto 63
	event  goto 64


state 46
	tsm_interface : TOK_TSMIFACE def_ident '{' tsm_sections . '}' ';'  (23)
	tsm_sections : tsm_sections . commands  (26)
	tsm_sections : tsm_sections . events  (27)

	TOK_COMMANDS  shift 44
	TOK_EVENTS  shift 45
	'}'  shift 65
	.  error

	commands  goto 66
	events  goto 67


state 47
	tsm_sections : commands .  (24)

	.  reduce 24


state 48
	tsm_sections : events .  (25)

	.  reduce 25


state 49
	enum_value : TOK_IDENT '=' . TOK_INT  (22)

	TOK_INT  shift 68
	.  error


state 50
	enum : TOK_ENUM def_ident '{' enum_list '}' . ';'  (18)

	';'  shift 69
	.  error


state 51
	enum_list : enum_list ',' . enum_value  (20)

	TOK_IDENT  shift 33
	.  error

	enum_value  goto 70


state 52
	const : TOK_CONST typed_ident '=' TOK_INT ';' .  (11)

	.  reduce 11


state 53
	const : TOK_CONST typed_ident '=' TOK_FLOAT ';' .  (12)

	.  reduce 12


state 54
	const : TOK_CONST typed_ident '=' TOK_STR ';' .  (13)

	.  reduce 13


state 55
	type : TOK_SEQUENCE '<' type . '>'  (59)

	'>'  shift 71
	.  error


state 56
	struct_arg : typed_ident ';' .  (17)

	.  reduce 17


state 57
	struct : TOK_STRUCT def_ident '{' struct_arglist '}' . ';'  (14)

	';'  shift 72
	.  error


state 58
	struct_arglist : struct_arglist struct_arg .  (16)

	.  reduce 16


state 59
	command : TOK_VOID . def_ident '(' command_sections ')' ';'  (35)

	TOK_IDENT  shift 5
	.  error

	def_ident  goto 73


state 60
	commands : TOK_COMMANDS commandlist .  (28)
	commandlist : commandlist . command  (31)

	TOK_VOID  shift 59
	TOK_COMMANDS  reduce 28
	TOK_EVENTS  reduce 28
	'}'  reduce 28

	command  goto 74


state 61
	commandlist : command .  (30)

	.  reduce 30


state 62
	event : TOK_VOID . def_ident '(' arglist ')' ';'  (34)

	TOK_IDENT  shift 5
	.  error

	def_ident  goto 75


state 63
	events : TOK_EVENTS eventlist .  (29)
	eventlist : eventlist . event  (33)

	TOK_VOID  shift 62
	TOK_COMMANDS  reduce 29
	TOK_EVENTS  reduce 29
	'}'  reduce 29

	event  goto 76


state 64
	eventlist : event .  (32)

	.  reduce 32


state 65
	tsm_interface : TOK_TSMIFACE def_ident '{' tsm_sections '}' . ';'  (23)

	';'  shift 77
	.  error


state 66
	tsm_sections : tsm_sections commands .  (26)

	.  reduce 26


state 67
	tsm_sections : tsm_sections events .  (27)

	.  reduce 27


state 68
	enum_value : TOK_IDENT '=' TOK_INT .  (22)

	.  reduce 22


state 69
	enum : TOK_ENUM def_ident '{' enum_list '}' ';' .  (18)

	.  reduce 18


state 70
	enum_list : enum_list ',' enum_value .  (20)

	.  reduce 20


state 71
	type : TOK_SEQUENCE '<' type '>' .  (59)

	.  reduce 59


state 72
	struct : TOK_STRUCT def_ident '{' struct_arglist '}' ';' .  (14)

	.  reduce 14


state 73
	command : TOK_VOID def_ident . '(' command_sections ')' ';'  (35)

	'('  shift 78
	.  error


state 74
	commandlist : commandlist command .  (31)

	.  reduce 31


state 75
	event : TOK_VOID def_ident . '(' arglist ')' ';'  (34)

	'('  shift 79
	.  error


state 76
	eventlist : eventlist event .  (33)

	.  reduce 33


state 77
	tsm_interface : TOK_TSMIFACE def_ident '{' tsm_sections '}' ';' .  (23)

	.  reduce 23


state 78
	command : TOK_VOID def_ident '(' . command_sections ')' ';'  (35)
	$$1 : .  (36)

	TOK_INSECT  shift 80
	TOK_INOUTSECT  shift 81
	TOK_OUTSECT  shift 82
	TOK_SEQUENCE  reduce 36
	TOK_IDENT  reduce 36
	TOK_RAW  reduce 36
	')'  reduce 36

	command_sections  goto 83
	$$1  goto 84
	insection  goto 85
	inoutsection  goto 86
	outsection  goto 87


state 79
	event : TOK_VOID def_ident '(' . arglist ')' ';'  (34)
	arglist : .  (51)
	$$5 : .  (56)

	TOK_RAW  shift 88
	TOK_SEQUENCE  reduce 56
	TOK_IDENT  reduce 56
	')'  reduce 51

	typed_ident  goto 89
	arglist  goto 90
	func_arg  goto 91
	$$5  goto 21


state 80
	insection : TOK_INSECT . $$2 arglist  (46)
	$$2 : .  (45)

	.  reduce 45

	$$2  goto 92


state 81
	inoutsection : TOK_INOUTSECT . $$3 arglist  (48)
	$$3 : .  (47)

	.  reduce 47

	$$3  goto 93


state 82
	outsection : TOK_OUTSECT . $$4 arglist  (50)
	$$4 : .  (49)

	.  reduce 49

	$$4  goto 94


state 83
	command : TOK_VOID def_ident '(' command_sections . ')' ';'  (35)

	')'  shift 95
	.  error


state 84
	command_sections : $$1 . arglist  (37)
	arglist : .  (51)
	$$5 : .  (56)

	TOK_RAW  shift 88
	TOK_SEQUENCE  reduce 56
	TOK_IDENT  reduce 56
	')'  reduce 51

	typed_ident  goto 89
	arglist  goto 96
	func_arg  goto 91
	$$5  goto 21


state 85
	command_sections : insection .  (38)
	command_sections : insection . inoutsection  (41)
	command_sections : insection . outsection  (42)
	command_sections : insection . inoutsection outsection  (44)

	TOK_INOUTSECT  shift 81
	TOK_OUTSECT  shift 82
	')'  reduce 38

	inoutsection  goto 97
	outsection  goto 98


state 86
	command_sections : inoutsection .  (39)
	command_sections : inoutsection . outsection  (43)

	TOK_OUTSECT  shift 82
	')'  reduce 39

	outsection  goto 99


state 87
	command_sections : outsection .  (40)

	.  reduce 40


state 88
	func_arg : TOK_RAW . typed_ident  (55)
	$$5 : .  (56)

	.  reduce 56

	typed_ident  goto 100
	$$5  goto 21


state 89
	func_arg : typed_ident .  (54)

	.  reduce 54


state 90
	event : TOK_VOID def_ident '(' arglist . ')' ';'  (34)

	')'  shift 101
	.  error


state 91
	arglist : func_arg .  (52)
	arglist : func_arg . ';' arglist  (53)

	';'  shift 102
	TOK_INOUTSECT  reduce 52
	TOK_OUTSECT  reduce 52
	')'  reduce 52


state 92
	insection : TOK_INSECT $$2 . arglist  (46)
	arglist : .  (51)
	$$5 : .  (56)

	TOK_RAW  shift 88
	TOK_INOUTSECT  reduce 51
	TOK_OUTSECT  reduce 51
	TOK_SEQUENCE  reduce 56
	TOK_IDENT  reduce 56
	')'  reduce 51

	typed_ident  goto 89
	arglist  goto 103
	func_arg  goto 91
	$$5  goto 21


state 93
	inoutsection : TOK_INOUTSECT $$3 . arglist  (48)
	arglist : .  (51)
	$$5 : .  (56)

	TOK_RAW  shift 88
	TOK_OUTSECT  reduce 51
	TOK_SEQUENCE  reduce 56
	TOK_IDENT  reduce 56
	')'  reduce 51

	typed_ident  goto 89
	arglist  goto 104
	func_arg  goto 91
	$$5  goto 21


state 94
	outsection : TOK_OUTSECT $$4 . arglist  (50)
	arglist : .  (51)
	$$5 : .  (56)

	TOK_RAW  shift 88
	TOK_SEQUENCE  reduce 56
	TOK_IDENT  reduce 56
	')'  reduce 51

	typed_ident  goto 89
	arglist  goto 105
	func_arg  goto 91
	$$5  goto 21


state 95
	command : TOK_VOID def_ident '(' command_sections ')' . ';'  (35)

	';'  shift 106
	.  error


state 96
	command_sections : $$1 arglist .  (37)

	.  reduce 37


state 97
	command_sections : insection inoutsection .  (41)
	command_sections : insection inoutsection . outsection  (44)

	TOK_OUTSECT  shift 82
	')'  reduce 41

	outsection  goto 107


state 98
	command_sections : insection outsection .  (42)

	.  reduce 42


state 99
	command_sections : inoutsection outsection .  (43)

	.  reduce 43


state 100
	func_arg : TOK_RAW typed_ident .  (55)

	.  reduce 55


state 101
	event : TOK_VOID def_ident '(' arglist ')' . ';'  (34)

	';'  shift 108
	.  error


state 102
	arglist : func_arg ';' . arglist  (53)
	arglist : .  (51)
	$$5 : .  (56)

	TOK_RAW  shift 88
	TOK_INOUTSECT  reduce 51
	TOK_OUTSECT  reduce 51
	TOK_SEQUENCE  reduce 56
	TOK_IDENT  reduce 56
	')'  reduce 51

	typed_ident  goto 89
	arglist  goto 109
	func_arg  goto 91
	$$5  goto 21


state 103
	insection : TOK_INSECT $$2 arglist .  (46)

	.  reduce 46


state 104
	inoutsection : TOK_INOUTSECT $$3 arglist .  (48)

	.  reduce 48


state 105
	outsection : TOK_OUTSECT $$4 arglist .  (50)

	.  reduce 50


state 106
	command : TOK_VOID def_ident '(' command_sections ')' ';' .  (35)

	.  reduce 35


state 107
	command_sections : insection inoutsection outsection .  (44)

	.  reduce 44


state 108
	event : TOK_VOID def_ident '(' arglist ')' ';' .  (34)

	.  reduce 34


state 109
	arglist : func_arg ';' arglist .  (53)

	.  reduce 53


28 terminals, 35 nonterminals
61 grammar rules, 110 states
